<resources>
    <string name="app_name">report_it</string>

    <string name="report">Report an Incident</string>
    <string name="donation">About Donation</string>
    <string name="donationText1">If for whatever reason you would like to make a donation to the Garda Benevolent Trust Fund you can send a cheque, postal order or bank draft to:</string>
    <string name="donationText2">The Secretary, Garda Benevolent Trust Fund, 4th Floor, Phibsboro Tower, Phibsboro, Dublin 7.</string>
    <string name="donationText3">For your convenience, we can provide our BIC &amp; IBAN details for E.F.T Payments Online.</string>
    <string name="donationText4">Please include your name and full Postal address, as a receipt is issued for all donations received.</string>
    <string name="donationText5">Thank You</string>
    <string name="call_112">Call 112</string>
    <string name="profile">Profile</string>
    <string name="info">About Application</string>
    <string name="out">Sign Out</string>
    <string name="aboutApplication1">This application requires Location permissions &amp; Camera permissions to work.</string>
    <string name="aboutApplication2">Incident can be reported by long clicking anywhere within 1km of your radius you\'d be able to drop a Marker on Maps.</string>
    <string name="aboutApplication3">If mistakenly marked at wrong location, you can always long click on marker to correct incident location.</string>
    <string name="aboutApplication4">After your\'e completely satisfied with location you can proceed with few question about incident.</string>
    <string name="aboutApplication0">Note: All the information should be legit otherwise legal investigation will be conducted.</string>
    <string name="aboutApplication5">For making yourself safe and proud.</string>

    <string name="terms_conditions">I Agree to <u>Terms
        &amp; Condition</u></string>
    <string name="select_gender">Select Your Gender:</string>
    <string name="option1">Select Your Gender:</string>
    <string name="option2">Select Your Gender:</string>
    <string name="option3">Select Your Gender:</string>

    <string name="q1">Please select type of incident:</string>
    <string name="q2">When did this incident happened?</string>
    <string name="q3">Are you involved in this incident?</string>
    <string name="q4">Are you doing this for someone you know?</string>
    <string name="q5">Please write as much information as you can:</string>
    <string name="q6">Please confirm that all information provided is true and is best of your knowledge.</string>
    <string name="q7">Please confirm if you want to be contacted for verification and information purposes.</string>
    <string name="attatchment">Please select proof of incident.</string>

    <string name="location">To report incidents, allow Reportit access to your location. Tap Settings > Permissions, and turn location On.</string>


    <string-array name="q1_options">
        <item>Theft</item>
        <item>Fire</item>
        <item>Accident</item>
        <item>Others</item>
    </string-array>
    <string-array name="q4_options">
        <item>Yes</item>
        <item>No</item>
        <item>Family/Friend/Relative</item>
        <item>Stranger</item>
    </string-array>
    <string-array name="q3_options">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
        <item>Prefer Not To Say</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
