<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gradient_bg"
    android:contentDescription="@string/app_name"
    android:fillViewport="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/imageView">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#0F7D6E"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="Details About Incident"
            app:titleTextColor="@color/white" />

        <TextView
            android:id="@+id/q1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/q1"
            android:layout_marginLeft="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />


        <EditText
            android:id="@+id/q1_textBox"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_bg"
            android:hint="e.g, Fire, Theft, Accident etc."
            android:inputType="textMultiLine"
            android:maxLength="50"
            android:maxLines="3"
            android:textAlignment="center"
            android:textSize="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/q1" />
        <TextView
            android:id="@+id/q2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/q2"
            android:layout_marginLeft="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/q1_textBox" />

        <EditText
            android:id="@+id/q2_textBox"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_bg"
            android:hint="Time/Date etc"
            android:inputType="textMultiLine"
            android:maxLength="250"
            android:maxLines="5"
            android:textAlignment="center"
            android:textSize="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/q2" />

        <TextView
            android:id="@+id/q3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/q3"
            android:layout_marginLeft="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/q2_textBox" />
        <EditText
            android:id="@+id/q3_textBox"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_bg"
            android:hint="Max 150 words"
            android:inputType="textMultiLine"
            android:maxLength="50"
            android:maxLines="3"
            android:textAlignment="center"
            android:textSize="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/q3" />

        <TextView
            android:id="@+id/q4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/q4"
            android:layout_marginLeft="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/q3_textBox" />
        <EditText
            android:id="@+id/q4_textBox"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_bg"
            android:hint="if you have any relation with victim?"
            android:inputType="textMultiLine"
            android:maxLength="150"
            android:maxLines="5"
            android:textAlignment="center"
            android:textSize="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/q4" />
        <TextView
            android:id="@+id/q5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/q5"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="5dp"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/q4_textBox" />

        <EditText
            android:id="@+id/q5_textBox"
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_bg"
            android:maxLength="2500"
            android:inputType="textMultiLine"
            android:maxLines="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            android:hint="Max 2500 words to help with this report"
            android:textAlignment="center"
            android:textSize="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/q5" />

        <TextView
            android:id="@+id/q6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/q6"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            android:layout_marginLeft="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/q5_textBox" />

        <LinearLayout
            android:id="@+id/linear_layout4"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.477"
            app:layout_constraintTop_toBottomOf="@+id/q6">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox_correct_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textColor="@drawable/edt_new_bg" />
        </LinearLayout>

        <TextView
            android:id="@+id/q7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="32dp"
            android:text="@string/q7"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/q6" />

        <LinearLayout
            android:id="@+id/linear_layout5"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.477"
            app:layout_constraintTop_toBottomOf="@+id/q7">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox_correct_details2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textColor="@drawable/edt_new_bg" />
        </LinearLayout>

        <Button
            android:id="@+id/button_submit"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/buttonColor"
            android:text="Submit"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.526"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout5" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            app:elevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_submit"
            app:menu="@menu/bottom_navigation_menu">

        </com.google.android.material.bottomnavigation.BottomNavigationView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>